优化换肤已经系统深色模式适配,优化界面全屏显示,替换app图标

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/main_bg_color"
+        android:background="#FFEB3B"
         tools:context=".MainActivity">
-
         <TextView
             android:padding="@dimen/dp_10"
             android:id="@+id/title_tv"
