--- a/vcommon/src/main/res/values/themes.xml
+++ b/vcommon/src/main/res/values/themes.xml
@@ -10,4 +10,8 @@
         <item name="android:windowLayoutInDisplayCutoutMode" tools:ignore="NewApi">shortEdges</item>
         <item name="android:windowTranslucentStatus" >true</item>
     </style>
+    <style name="SplashAppTheme" parent="BaseAppTheme">
+        <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@drawable/splash_bg</item>
+    </style>
 </resources>
