--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -10,6 +11,44 @@
         android:background="#aaaaaa"
         android:id="@+id/mainview"
         android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="match_parent"
+            android:id="@+id/img"
+            android:scaleType="centerCrop"
+            android:layout_height="match_parent"/>
 
+
+        <com.qinyue.vcommon.views.ArcProgressStackView
+            android:layout_marginRight="@dimen/dp_15"
+            android:layout_width="72dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="@dimen/dp_50"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/progress_view"
+            app:apsv_animated="true"
+            app:apsv_dragged="false"
+            app:apsv_draw_width="@dimen/dp_3"
+            app:apsv_leveled="true"
+            app:apsv_model_bg_enabled="true"
+            app:apsv_preview_bg="#34ffa70b"
+            app:apsv_preview_colors="@array/default_preview"
+            app:apsv_rounded="true"
+            app:apsv_shadowed="false"
+            app:apsv_text_color="#00000000"
+            android:layout_height="72dp"/>
+        <Button
+            android:id="@+id/time_but"
+            app:layout_constraintTop_toTopOf="@id/progress_view"
+            app:layout_constraintRight_toRightOf="@id/progress_view"
+            app:layout_constraintLeft_toLeftOf="@id/progress_view"
+            app:layout_constraintBottom_toBottomOf="@id/progress_view"
+            android:background="@drawable/shape_black_r90_bg"
+            android:textColor="@color/normal_text_color"
+            android:minHeight="@dimen/dp_0"
+            android:minWidth="@dimen/dp_0"
+            android:text="跳过"
+            android:layout_width="@dimen/dp_65"
+            android:layout_height="@dimen/dp_65"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
