--- a/vcommon/src/main/res/values/colors.xml
+++ b/vcommon/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="title_text_color">#000000</color>
     <color name="normal_text_color">#ffffff</color>
+    <color name="normal_text_hint_color">#B8B4B4</color>
     <color name="title_bg_color">#F80101</color>
     <color name="main_bg_color">#ffffff</color>
     <color name="white">#ffffff</color>
