完善登录相关功能,添加basemvi,和网络请求生命周期绑定

--- a/vmain/src/main/res/layout/activity_login.xml
+++ b/vmain/src/main/res/layout/activity_login.xml
@@ -46,8 +46,10 @@
                 android:textColorHint="@color/normal_text_hint_color"
                 android:background="@null"
                 android:maxLines="1"
+                android:singleLine="true"
                 android:hint="请输入账号"
-                android:imeOptions="actionDone"
+                android:text="qinyue"
+                android:imeOptions="actionNext"
                 android:id="@+id/name_edit"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -73,6 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <EditText
+                android:text="qwewasd102453."
                 android:layout_marginLeft="@dimen/dp_10"
                 android:textColorHint="@color/normal_text_hint_color"
                 android:textSize="@dimen/dp_14"
@@ -80,6 +83,7 @@
                 android:hint="请输入密码"
                 android:background="@null"
                 android:maxLines="1"
+                android:singleLine="true"
                 android:imeOptions="actionDone"
                 android:id="@+id/pwd_edit"
                 android:layout_width="0dp"
